<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="P_StationLine0Buffer" Id="{6e380573-84b6-4c2e-a97a-2f0300663ef8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_StationLine0Buffer
VAR
	_station:					REFERENCE TO ST_SystemStation;
	_bEnable: 					BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[_station REF= G_arrStation[E_Station.Line0Buffer];
_station.arrName[E_Language.Chinese]:="线体0上料缓存";
_station.arrName[E_Language.Vietnamese]:="Bộ nhớ nhớ dòng chính";
_bEnable:= NOT GVL.stSetting.arrStationShield[E_Station.Line0Buffer];
GVL.stSetting.arrStationShield[E_Station.Line0Buffer]:=GVL.stSetting.bManualLoad;


A_Home();
A_Auto();]]></ST>
    </Implementation>
    <Action Name="A_Auto" Id="{b2494032-d9da-4987-a26d-e6aff52e6045}">
      <Implementation>
        <ST><![CDATA[CASE _station.iStepNow OF
	1000:
		_station.arrInfo[E_Language.Chinese]:="初始化完成等待启动";
		IF _bEnable  THEN
			_station.iStepNext:=1101;
		END_IF
	1101:
		_station.arrInfo[E_Language.Chinese]:="判断缓存站是否有料";
		
		IF NOT GVL.stSetting.bLine0BufferShield THEN
			IF GVL.I.bLine0Check3 THEN
				_station.iStepNext:=1501;
			ELSE
				_station.iStepNext:=1201;
			END_IF
		ELSE
			IF GVL.I.bLine0Check3 THEN
				_station.iStepNext:=1501;
			END_IF
		END_IF
		
	1201:
		_station.arrInfo[E_Language.Chinese]:="请求上料站放料";
		GVL.stHandshake.bBufferToLoad:=TRUE;
		IF GVL.stHandshake.bLoadToBuffer THEN
			_station.iStepNext:=1301;
		END_IF
	1301:
		_station.arrInfo[E_Language.Chinese]:="等待产品到位";
		GVL.stOverTime.bLine0Check3:=TRUE;
		IF GVL.I.bLine0Check3 THEN
			GVL.stOverTime.bLine0Check3:=FALSE;
			_station.iStepNext:=1401;
		END_IF
	1401:
		_station.arrInfo[E_Language.Chinese]:="复位请求放料信号";
		GVL.stHandshake.bBufferToLoad:=FALSE;
		IF NOT GVL.stHandshake.bLoadToBuffer THEN
			_station.iStepNext:=1501;
		END_IF	
	1501:
		_station.arrInfo[E_Language.Chinese]:="请求放料";
		CASE GVL_Data.stRecipe.eMachineType OF
			 E_MachineType._367:
				IF GVL.stHandshake.bSteering THEN
					GVL.stHandshake.bSteeringOk:=TRUE;
					_station.iStepNext:=1801;
				END_IF
			ELSE
				GVL.stHandshake.bBufferToAcquire:=TRUE;
		 		IF GVL.stHandshake.bAcquireToBuffer THEN
				 _station.iStepNext:=1812;
		 		END_IF
		END_CASE
	1801:
		_station.arrInfo[E_Language.Chinese]:="拨料气缸至工作位";
		G_arrFbCylinder[E_Cylinder.Line0Push].M_HomeRequest();
		IF NOT GVL.I.bLine0Push_Cyl_W THEN
			_station.iStepNext:=1802;
		END_IF	
	1802:
		_station.arrInfo[E_Language.Chinese]:="请求主流线上料";
		IF GVL.I.bLine0Push_Cyl_Safe OR GVL.I.bLine0Push_Cyl_H THEN
			GVL.stHandshake.bBufferToLoad:=TRUE;
			_station.iStepNext:=1811;
		END_IF		
	1811:
		_station.arrInfo[E_Language.Chinese]:="拨料气缸至工作位";
		IF G_arrFbCylinder[E_Cylinder.Line0Push].M_HomeRequest() THEN
			_station.iStepNext:=1821;
		END_IF
	1812:
		_station.arrInfo[E_Language.Chinese]:="拨料气缸至工作位";
		IF G_arrFbCylinder[E_Cylinder.Line0Push].M_HomeRequest() THEN
			_station.iStepNext:=1821;
		END_IF	
	1821:
	    G_arrFbCylinder[E_Cylinder.Line0Push].M_WorkRequest();
		IF NOT GVL.I.bLine0Push_Cyl_H THEN  
			_station.iStepNext:=1831;
		END_IF 
	1831:
		_station.arrInfo[E_Language.Chinese]:="等待放料结束";
		
		CASE GVL_Data.stRecipe.eMachineType OF
			E_MachineType._367:
			
				G_arrFbCylinder[E_Cylinder.Line0PushElevator].M_HomeRequest();
				
				IF (GVL.I.bLine0Push_Cyl_Safe OR GVL.I.bLine0Push_Cyl_W) AND NOT GVL.I.bLine0PushElevator_Cyl_H THEN
					_station.iStepNext:=2001;	
				END_IF
				
				IF NOT GVL.stHandshake.bSteering THEN
					GVL.stHandshake.bSteeringOk:=FALSE;
					_station.iStepNext:=1851;
				END_IF
				
				
			ELSE
				GVL.stHandshake.bBufferToAcquire:=FALSE;
				IF NOT GVL.stHandshake.bAcquireToBuffer THEN
					_station.iStepNext:=1901;
				END_IF
		END_CASE
	1851:
		_station.arrInfo[E_Language.Chinese]:="拨料气缸至待料位 拨料升降气缸至上升位";
		
		IF (GVL.I.bLine0Push_Cyl_Safe OR GVL.I.bLine0Push_Cyl_W) AND NOT GVL.I.bLine0PushElevator_Cyl_H THEN
			_station.iStepNext:=2001;	
		END_IF	
		
		IF G_arrFbCylinder[E_Cylinder.Line0Push].M_WorkRequest() AND G_arrFbCylinder[E_Cylinder.Line0PushElevator].M_HomeRequest() THEN
			_station.iStepNext:=1861;
		END_IF
	1861:
		_station.arrInfo[E_Language.Chinese]:="拨料升降气缸至下降位";
		IF G_arrFbCylinder[E_Cylinder.Line0PushElevator].M_WorkRequest() THEN
			_station.iStepNext:=1201;
		END_IF		
	1901:
		_station.arrInfo[E_Language.Chinese]:="拨料气缸至待料位";
		IF G_arrFbCylinder[E_Cylinder.Line0Push].M_WorkRequest() THEN
			_station.iStepNext:=1101;
		END_IF				
	2001:
		_station.arrInfo[E_Language.Chinese]:="拨料气缸至工作位 拨料升降气缸至上升位";
		IF G_arrFbCylinder[E_Cylinder.Line0Push].M_HomeRequest() AND G_arrFbCylinder[E_Cylinder.Line0PushElevator].M_HomeRequest() THEN
			_station.iStepNext:=2101;
		END_IF
	2101:		
		_station.arrInfo[E_Language.Chinese]:="拨料升降气缸上升速度过慢报警";
		IF NOT GVL.AlarmResetMark THEN
			GVL.stOverTime.bLine0PushElevatorUp:=TRUE;
		ELSE
			_station.iStepNext:=2201;
		END_IF		
	2201:
		GVL.stOverTime.bLine0PushElevatorUp:=FALSE;
		GVL.AlarmResetMark:=FALSE;
		IF NOT GVL.stOverTime.bLine0PushElevatorUp THEN
			_station.iStepNext:=1821;
		END_IF		
		
END_CASE]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Home" Id="{0db1f696-fb82-4fc6-a042-af1ea1a56928}">
      <Implementation>
        <ST><![CDATA[CASE _station.iStepNow OF
	0:
		_station.arrInfo[E_Language.Chinese]:="等待初始化";
		_station.iStepNext:=SEL(_bEnable,1000,100);	
	100:
		_station.arrInfo[E_Language.Chinese]:="判断拆解机机型";
		_station.iStepNext:=SEL(GVL_Data.stRecipe.eMachineType=E_MachineType._367,400,200);			
	200:
		_station.arrInfo[E_Language.Chinese]:="判断拨料气缸位置";
		IF GVL.I.bLine0Push_Cyl_H THEN
			_station.iStepNext:=210;
		ELSIF GVL.I.bLine0Push_Cyl_W THEN 
			_station.iStepNext:=400;
		ELSE
			_station.iStepNext:=300;
		END_IF	
	210:		
		_station.arrInfo[E_Language.Chinese]:="拨料气缸至待料位";
	    G_arrFbCylinder[E_Cylinder.Line0Push].M_WorkRequest();
		IF NOT GVL.I.bLine0Push_Cyl_H THEN
			_station.iStepNext:=220;
		END_IF				
	220:
		_station.arrInfo[E_Language.Chinese]:="拨料升降气缸至上升位";
		IF G_arrFbCylinder[E_Cylinder.Line0Push].M_WorkRequest() AND G_arrFbCylinder[E_Cylinder.Line0PushElevator].M_HomeRequest() THEN
			_station.iStepNext:=500;
		END_IF	
	300:
		_station.arrInfo[E_Language.Chinese]:="拨料升降气缸至上升位";
		IF G_arrFbCylinder[E_Cylinder.Line0PushElevator].M_HomeRequest() THEN
			_station.iStepNext:=400;
		END_IF		
	400:
		_station.arrInfo[E_Language.Chinese]:="拨料气缸至待料位";
		IF G_arrFbCylinder[E_Cylinder.Line0Push].M_WorkRequest() THEN
			_station.iStepNext:=SEL(GVL_Data.stRecipe.eMachineType=E_MachineType._367,1000,500);
		END_IF
	500:
		_station.arrInfo[E_Language.Chinese]:="拨料升降气缸至下降位";
		IF G_arrFbCylinder[E_Cylinder.Line0PushElevator].M_WorkRequest() THEN
			_station.iStepNext:=1000;
		END_IF	
		
		
		
END_CASE]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="P_StationLine0Buffer">
      <LineId Id="5" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="10" Count="1" />
    </LineIds>
    <LineIds Name="P_StationLine0Buffer.A_Auto">
      <LineId Id="2" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="85" Count="2" />
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="132" Count="1" />
      <LineId Id="8" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="134" Count="1" />
      <LineId Id="137" Count="2" />
      <LineId Id="136" Count="0" />
      <LineId Id="12" Count="6" />
      <LineId Id="24" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="20" Count="3" />
      <LineId Id="28" Count="0" />
      <LineId Id="25" Count="2" />
      <LineId Id="29" Count="3" />
      <LineId Id="100" Count="2" />
      <LineId Id="62" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="103" Count="2" />
      <LineId Id="35" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="184" Count="0" />
      <LineId Id="127" Count="1" />
      <LineId Id="131" Count="0" />
      <LineId Id="216" Count="1" />
      <LineId Id="219" Count="0" />
      <LineId Id="221" Count="0" />
      <LineId Id="220" Count="0" />
      <LineId Id="211" Count="0" />
      <LineId Id="180" Count="3" />
      <LineId Id="177" Count="0" />
      <LineId Id="205" Count="1" />
      <LineId Id="208" Count="1" />
      <LineId Id="201" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="144" Count="2" />
      <LineId Id="55" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="58" Count="1" />
      <LineId Id="154" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="249" Count="1" />
      <LineId Id="155" Count="0" />
      <LineId Id="248" Count="0" />
      <LineId Id="97" Count="2" />
      <LineId Id="70" Count="0" />
      <LineId Id="152" Count="1" />
      <LineId Id="60" Count="0" />
      <LineId Id="94" Count="2" />
      <LineId Id="61" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="148" Count="1" />
      <LineId Id="252" Count="0" />
      <LineId Id="255" Count="1" />
      <LineId Id="253" Count="1" />
      <LineId Id="150" Count="1" />
      <LineId Id="147" Count="0" />
      <LineId Id="172" Count="3" />
      <LineId Id="168" Count="0" />
      <LineId Id="164" Count="3" />
      <LineId Id="157" Count="0" />
      <LineId Id="231" Count="16" />
      <LineId Id="223" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="P_StationLine0Buffer.A_Home">
      <LineId Id="2" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="48" Count="1" />
      <LineId Id="42" Count="0" />
      <LineId Id="32" Count="5" />
      <LineId Id="89" Count="1" />
      <LineId Id="21" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="67" Count="2" />
      <LineId Id="59" Count="0" />
      <LineId Id="55" Count="3" />
      <LineId Id="50" Count="0" />
      <LineId Id="77" Count="3" />
      <LineId Id="71" Count="0" />
      <LineId Id="6" Count="4" />
      <LineId Id="85" Count="3" />
      <LineId Id="81" Count="3" />
      <LineId Id="3" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>